tests/invalid/noNamespaceMerging.ts
// @ts-nocheck
namespace MyNamespace {
	export const value = 5;
}
